update paper notebook

--- a/paper.ipynb
+++ b/paper.ipynb
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basicly, the old work will seperately encode the pair texts then use attention"
+    "Basically, the old work will seperately encode the pair texts then use attention"
    ]
   },
   {
@@ -237,7 +237,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For each task, we simply plug in the taskspecific inputs and outputs into BERT and finetune all the parameters end-to-end."
+   ]
   }
  ],
  "metadata": {
