update paper notebook

--- a/paper.ipynb
+++ b/paper.ipynb
@@ -135,6 +135,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![input.png](images/input.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ WordPiece Embedding \n",
+    "+ [CLS] used at the begining of the text and decide which classification tasks\n",
+    "+ [SEP] used to seperate 2 sentences\n",
+    "+ 2 different segment embedding are used for 2 different sentences.\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
