--- a/note.ipynb
+++ b/note.ipynb
@@ -111,6 +111,43 @@
    "source": [
     "change words into their ids in dictionary"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AutoTokenizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "tokenizer = AutoTokenizer.from_pretrained('nlptown/bert-base-multilingual-uncased-sentiment')\n",
+    "model = AutoModelForSequenceClassification.from_pretrained('nlptown/bert-base-multilingual-uncased-sentiment')\n",
+    "```\n",
+    "**Note**: there are a number of NLP pretrained models on hugging face (translation, q&a, classification and generation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a library can parser html, useful for crawling data from web, also can use with regex"
+   ]
   }
  ],
  "metadata": {
