Add test on vnmese for MLM

--- a/MaskedLM.ipynb
+++ b/MaskedLM.ipynb
@@ -1730,7 +1730,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Z96fAfa4Q1sZ",
         "colab": {
@@ -1784,7 +1784,7 @@
       "metadata": {
         "id": "if2tH-r_rcUn"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1859,7 +1859,7 @@
         "id": "fHWTrtpVsyJ3",
         "outputId": "0a18e49a-47e1-4156-87cd-e6cda08259d8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1973,7 +1973,7 @@
       "metadata": {
         "id": "wWFJdFhS1wXP"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1988,7 +1988,7 @@
         "id": "abuAccioyKo2",
         "outputId": "beabe45d-d687-49c0-da31-10be04c67109"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2017,7 +2017,7 @@
         "id": "Xjt3v6j80gt2",
         "outputId": "c9f6f162-a654-4f2f-e45a-915b9b234030"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2040,7 +2040,16 @@
       "metadata": {
         "id": "qOrNlaBU0lia"
       },
-      "execution_count": 8,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1UkX5z8xAm78"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2051,7 +2060,7 @@
       "metadata": {
         "id": "7WEZws7g2Opq"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2066,7 +2075,7 @@
         "id": "Yg3N57_73bnR",
         "outputId": "5e272072-04bc-4ea0-f78c-a1d23512b47c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2095,7 +2104,7 @@
         "id": "04NKNd9l2VGU",
         "outputId": "a3847e2b-79b7-434f-b90c-c1342088e8cc"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2108,13 +2117,190 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# Test on vnmese"
+      ],
       "metadata": {
         "id": "fCVmFU194N_m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip3 install py_vncorenlp"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gLZYnWDgQy3s",
+        "outputId": "675e3f23-56bf-4d3e-87fb-98cb93f5beba"
       },
-      "execution_count": 12,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting py_vncorenlp\n",
+            "  Downloading py_vncorenlp-0.1.4.tar.gz (3.9 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting pyjnius (from py_vncorenlp)\n",
+            "  Downloading pyjnius-1.6.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (10 kB)\n",
+            "Downloading pyjnius-1.6.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.5 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m22.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hBuilding wheels for collected packages: py_vncorenlp\n",
+            "  Building wheel for py_vncorenlp (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for py_vncorenlp: filename=py_vncorenlp-0.1.4-py3-none-any.whl size=4305 sha256=1b3a47ed871cd7cbf4c87332d0399287e5e5bac8d6ca7f8355c42ae62bf7fa19\n",
+            "  Stored in directory: /root/.cache/pip/wheels/d5/d9/bf/62632cdb007c702a0664091e92a0bb1f18a2fcecbe962d9827\n",
+            "Successfully built py_vncorenlp\n",
+            "Installing collected packages: pyjnius, py_vncorenlp\n",
+            "Successfully installed py_vncorenlp-0.1.4 pyjnius-1.6.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir vncorenlp"
+      ],
+      "metadata": {
+        "id": "rmBeHCGGRDCj"
+      },
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import py_vncorenlp\n",
+        "py_vncorenlp.download_model(save_dir='/content/vncorenlp')\n",
+        "model = py_vncorenlp.VnCoreNLP(save_dir='/content/vncorenlp')\n"
+      ],
+      "metadata": {
+        "id": "9sz-zrsyRvgT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import pipeline\n",
+        "unmasker = pipeline('fill-mask', model='bert-base-multilingual-cased')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XWbphOa-O4QM",
+        "outputId": "fc841a50-6ce8-48f6-b666-8d949a1b767e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertForMaskedLM: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+            "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+            "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentence = \"Ngày hôm nay, có một cô gái [MASK] và làm toán với tôi. Tôi rất [MASK]\"\n",
+        "def masked_word_seg(sentence):\n",
+        "  texts = model.word_segment(sentence)\n",
+        "  texts = [text.replace('[ MASK ]', '[MASK]') for text in texts]\n",
+        "  return \" \".join(texts)\n",
+        "\n",
+        "seg_sentence = masked_word_seg(sentence)"
+      ],
+      "metadata": {
+        "id": "PLUtJDI_N7Qh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unmasker(seg_sentence)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p50InUq_VLfd",
+        "outputId": "ff1a527a-b832-4799-995e-15d10aafc9db"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[{'score': 0.19624343514442444,\n",
+              "   'token': 12002,\n",
+              "   'token_str': 'đến',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái đến và làm toán với tôi. Tôi rất [MASK] [SEP]'},\n",
+              "  {'score': 0.06345115602016449,\n",
+              "   'token': 117,\n",
+              "   'token_str': ',',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái, và làm toán với tôi. Tôi rất [MASK] [SEP]'},\n",
+              "  {'score': 0.04962293431162834,\n",
+              "   'token': 16895,\n",
+              "   'token_str': 'đi',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái đi và làm toán với tôi. Tôi rất [MASK] [SEP]'},\n",
+              "  {'score': 0.03792138397693634,\n",
+              "   'token': 22072,\n",
+              "   'token_str': 'nói',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái nói và làm toán với tôi. Tôi rất [MASK] [SEP]'},\n",
+              "  {'score': 0.036164410412311554,\n",
+              "   'token': 43094,\n",
+              "   'token_str': 'bạn',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái bạn và làm toán với tôi. Tôi rất [MASK] [SEP]'}],\n",
+              " [{'score': 0.41027048230171204,\n",
+              "   'token': 119,\n",
+              "   'token_str': '.',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái [MASK] và làm toán với tôi. Tôi rất. [SEP]'},\n",
+              "  {'score': 0.08427710086107254,\n",
+              "   'token': 18946,\n",
+              "   'token_str': 'rất',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái [MASK] và làm toán với tôi. Tôi rất rất [SEP]'},\n",
+              "  {'score': 0.047253262251615524,\n",
+              "   'token': 13710,\n",
+              "   'token_str': 'nhiều',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái [MASK] và làm toán với tôi. Tôi rất nhiều [SEP]'},\n",
+              "  {'score': 0.03447673097252846,\n",
+              "   'token': 15731,\n",
+              "   'token_str': 'lớn',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái [MASK] và làm toán với tôi. Tôi rất lớn [SEP]'},\n",
+              "  {'score': 0.027910150587558746,\n",
+              "   'token': 33598,\n",
+              "   'token_str': 'tốt',\n",
+              "   'sequence': '[CLS] Ngày hôm _ nay, có một cô gái [MASK] và làm toán với tôi. Tôi rất tốt [SEP]'}]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Training"
+      ],
+      "metadata": {
+        "id": "_jGB4EwrXK2G"
+      }
     }
   ]
 }
